@@ -59,6 +59,31 @@ BSD video input device.
 
 Linux DV 1394 input device.
 
+@section fbdev
+
+Linux framebuffer input device.
+
+The Linux framebuffer is a graphic hardware-independent abstraction
+layer to show graphics on a computer monitor, typically on the
+console. It is accessed through a file device node, usually
+@file{/dev/fb0}.
+
+For more detailed information read the file
+Documentation/fb/framebuffer.txt included in the Linux source tree.
+
+For example, to record from the framebuffer device @file{/dev/fb0} with
+@file{ffmpeg}:
+@example
+ffmpeg -f fbdev -r 10 -i /dev/fb0 out.avi
+@end example
+
+You can take a single screenshot image with the command:
+@example
+ffmpeg -f fbdev -vframes 1 -r 1 -i /dev/fb0 screenshot.jpeg
+@end example
+
+See also @url{http://linux-fbdev.sourceforge.net/}, and fbset(1).
+
 @section jack
 
 JACK input device.
