@@ -77,6 +77,7 @@ version <next>:
 - Wing Commander IV movies decoder added
 - movie source added
 - Bink version 'b' audio and video decoder
+- Linux framebuffer input device added
 
 
 version 0.6:
